--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,12 +28,11 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Lint code
+      - name: Lint code (flake8)
         run: |
-         flake8 .
+          flake8 .
 
-
-      - name: Run tests
+      - name: Run tests (pytest)
         env:
           PYTHONPATH: .
         run: |
