--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: [ main, master ]
   schedule:
-    - cron: '0 3 * * 1'  # weekly scan
+    - cron: '0 3 * * 1'
 
 jobs:
 
@@ -18,7 +18,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Python
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
@@ -32,7 +32,7 @@ jobs:
           mkdir -p security-reports
           bandit -r . -f json -o security-reports/bandit-report.json || true
 
-      - name: Upload Bandit Report
+      - name: Upload Bandit report
         uses: actions/upload-artifact@v4
         with:
           name: bandit-report
@@ -40,14 +40,14 @@ jobs:
 
 
   dependency-audit:
-    name: Python Dependency Audit
+    name: Dependency Audit (pip-audit)
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Python
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
@@ -61,7 +61,7 @@ jobs:
           mkdir -p security-reports
           pip-audit --format json > security-reports/pip-audit.json || true
 
-      - name: Upload Audit Report
+      - name: Upload pip-audit report
         uses: actions/upload-artifact@v4
         with:
           name: pip-audit-report
