--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,13 +1,65 @@
-name: Python CI
+name: Full CI Pipeline
 
 on:
   push:
     branches: [ main, master ]
   pull_request:
     branches: [ main, master ]
+  schedule:
+    - cron: '0 3 * * 1'  # Weekly security scans
 
 jobs:
-  lint-and-test:
+
+  security-bandit:
+    name: Bandit SAST Scan
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      - run: pip install bandit
+
+      - name: Run Bandit (soft fail)
+        run: |
+          mkdir -p security-reports
+          bandit -r . -f json -o security-reports/bandit-report.json || true
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: bandit-report
+          path: security-reports/bandit-report.json
+
+
+  security-dep-audit:
+    name: Dependency Audit (pip-audit)
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      - run: pip install pip-audit
+
+      - name: Run pip-audit (soft fail)
+        run: |
+          mkdir -p security-reports
+          pip-audit --format json > security-reports/pip-audit.json || true
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: pip-audit-report
+          path: security-reports/pip-audit.json
+
+
+  python-ci:
+    name: Lint, Test, Coverage, Sonar
     runs-on: ubuntu-latest
 
     strategy:
@@ -15,10 +67,9 @@ jobs:
         python-version: [ "3.10", "3.11" ]
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
@@ -27,13 +78,41 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install pytest pytest-cov flake8
 
-      - name: Lint code (flake8)
-        run: |
-          flake8 .
+      - name: Lint with flake8
+        run: flake8 .
 
-      - name: Run tests (pytest)
-        env:
-          PYTHONPATH: .
+      - name: Run Tests + Coverage
         run: |
           pytest --cov=./ --cov-report=xml
+          ls -la  # show coverage.xml for debugging
+
+      - name: Upload Coverage Result
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-xml
+          path: coverage.xml
+
+
+      # ---------- SONARQUBE / SONARCLOUD SCAN ----------
+
+      - name: Sonar Scan
+        uses: SonarSource/sonarqube-scan-action@v2
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+        with:
+          args: >
+            -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
+            -Dsonar.organization=${{ secrets.SONAR_ORG }}
+            -Dsonar.python.coverage.reportPaths=coverage.xml
+            -Dsonar.sources=.
+            -Dsonar.tests=.
+            -Dsonar.exclusions=**/tests/**
+
+
+      - name: SonarQube Quality Gate
+        uses: SonarSource/sonarqube-quality-gate-action@v1
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
